--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://ckujawa.gihub.io/reactCalculator",
   "name": "calculator",
   "version": "0.1.0",
   "private": true,
@@ -26,7 +27,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "gh-pages": "^2.0.1"
+    "gh-pages": "^2.1.1"
   },
   "homepage": "http://ckujawa.github.io/reactCalculator"
 }
